Gizmo line_width does not work in latest version #76045

Closed
opened 2020-04-24 11:34:37 +02:00 by Cédric · 19 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: d712f1f83a
Worked: 2.83 (sub 13), branch: master, commit date: 2020-04-20 02:11, hash: 23bb42a06e

Short description of error
The Gizmo line_width option is not working in the latest blender version 2.83

Exact steps for others to reproduce the error
Open the file with the script gizmo_operator.py modified for the exemple :

  • line 132 to 138 : the circle is replaced by a cross, draw_options={"FILL", "ALIGN_VIEW"} and the line_width = 15
    Select the cube and go in edit mode
    Launch the script and then using F3, search for the operator : Select Side of Plane
    You should see a fat cross in the middle

Gizmo_line_width_bug.jpg

Gizmo_line_width_bug.blend

Thanks a lot for your help.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: `d712f1f83a` Worked: 2.83 (sub 13), branch: master, commit date: 2020-04-20 02:11, hash: `23bb42a06e` **Short description of error** The Gizmo line_width option is not working in the latest blender version 2.83 **Exact steps for others to reproduce the error** Open the file with the script gizmo_operator.py modified for the exemple : - line 132 to 138 : the circle is replaced by a cross, draw_options={"FILL", "ALIGN_VIEW"} and the line_width = 15 Select the cube and go in edit mode Launch the script and then using F3, search for the operator : Select Side of Plane You should see a fat cross in the middle ![Gizmo_line_width_bug.jpg](https://archive.blender.org/developer/F8492322/Gizmo_line_width_bug.jpg) [Gizmo_line_width_bug.blend](https://archive.blender.org/developer/F8492313/Gizmo_line_width_bug.blend) Thanks a lot for your help.
Author
Member

Added subscriber: @Clarkx

Added subscriber: @Clarkx

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can not reproduce the issue with the steps provided.

I:

  1. Open up the file.
  2. Run the script
  3. Go in and out of edit mode
  4. Nothing happens, no cross.
I can not reproduce the issue with the steps provided. I: 1. Open up the file. 2. Run the script 3. Go in and out of edit mode 4. Nothing happens, no cross.
Author
Member

Sorry, my bad, you have to launch the script and then using F3, search for the operator : Select Side of Plane
Thanks @ZedDB

Sorry, my bad, you have to launch the script and then using F3, search for the operator : Select Side of Plane Thanks @ZedDB
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Code probably needs some fixes/adjustments after d712f1f83a.

Code probably needs some fixes/adjustments after d712f1f83a.

@Clarkx I still can reproduce. Even when I run the "Select Side of Plane" operator, no cross is visible.

With the latest build I:

  1. Open the file
  2. Run the script (doesn't seem to matter if I go in and out of edit mode)
  3. Run the operator
  4. Nothing happens.
@Clarkx I still can reproduce. Even when I run the "Select Side of Plane" operator, no cross is visible. With the latest build I: 1. Open the file 2. Run the script (doesn't seem to matter if I go in and out of edit mode) 3. Run the operator 4. Nothing happens.
Author
Member

Well, I really don't understand.. You have to be in edit mode, for sure, for the script to work.
You do have the 'Show Gizmo' toggle in the header ?

This is what I do :
2020-04-28_14-57-13.gif

Thanks again for taking the time.

Well, I really don't understand.. You have to be in edit mode, for sure, for the script to work. You do have the 'Show Gizmo' toggle in the header ? This is what I do : ![2020-04-28_14-57-13.gif](https://archive.blender.org/developer/F8499104/2020-04-28_14-57-13.gif) Thanks again for taking the time.
Author
Member

Hi @ZedDB Sorry to bother you. Just for my understanding, is there anything more I can or should do to help ? Or may be this is not a bug ?

Hi @ZedDB Sorry to bother you. Just for my understanding, is there anything more I can or should do to help ? Or may be this is not a bug ?

I have been occupied with other tasks, I'll try to get back to this and see if I can reproduce before the end of this week.
Sorry for taking so long to get around to this.

I have been occupied with other tasks, I'll try to get back to this and see if I can reproduce before the end of this week. Sorry for taking so long to get around to this.

Still can't reproduce this, show gizmos are on:
recording.mp4

Still can't reproduce this, show gizmos are on: [recording.mp4](https://archive.blender.org/developer/F8503443/recording.mp4)
Author
Member

You should report a bug :o) The gizmo operator is one of the templates provided with Blender. Maybe the gizmo size in your preferences is reduce to the minimum ?

You should report a bug :o) The gizmo operator is one of the templates provided with Blender. Maybe the gizmo size in your preferences is reduce to the minimum ?
Author
Member

Hi @JulianEisel @ZedDB I'm trully sorry, I know you guys have a lot to do, but I don't know what I can do more. This is still broken in the last build and this report still say that you need information.

Hi @JulianEisel @ZedDB I'm trully sorry, I know you guys have a lot to do, but I don't know what I can do more. This is still broken in the last build and this report still say that you need information.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

I can't reproduce it.
So I guess perhaps @Jeroen-Bakker @fclem can reproduce it or have any hunch what is wrong?

I can't reproduce it. So I guess perhaps @Jeroen-Bakker @fclem can reproduce it or have any hunch what is wrong?
Clément Foucault self-assigned this 2020-05-07 17:38:33 +02:00

This issue was referenced by 933c721ccb

This issue was referenced by 933c721ccbe32e97e6125eb1068d9cdca1b33de6

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76045
No description provided.