Fix T76045 Gizmo: line_width does not work in latest version