source/blender/editors/gizmo_library/gizmo_types/move3d_gizmo.c
@@ -106,7 +106,8 @@ static void move_geom_draw(const wmGizmo *gz,
   wm_gizmo_geometryinfo_draw(&wm_gizmo_geom_data_move3d, select);
 #else
   const int draw_style = RNA_enum_get(gz->ptr, "draw_style");
-  const bool filled = ((draw_options & (select ? (ED_GIZMO_MOVE_DRAW_FLAG_FILL |
+  const bool filled = (draw_style != ED_GIZMO_MOVE_STYLE_CROSS_2D) &&
+                      ((draw_options & (select ? (ED_GIZMO_MOVE_DRAW_FLAG_FILL |
                                                   ED_GIZMO_MOVE_DRAW_FLAG_FILL_SELECT) :
                                                  ED_GIZMO_MOVE_DRAW_FLAG_FILL)));
 
